tests/test_proof/bad/output/no_vars-conflict.catala_en.Proof
[ERROR] Two exceptions overlap for variable A.y
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
8 |   context y content integer
  |           ^
  + Test
[RESULT] Variable A.y never returns an empty error
[RESULT] No two exceptions to ever overlap for variable A.x
[RESULT] Variable A.x never returns an empty error
